revamp  initial  configuration for Sesphr project

--- a/templates/hospital_admin_dashboard.html
+++ b/templates/hospital_admin_dashboard.html
@@ -71,7 +71,7 @@
    {%endif%}
     {%if admin is defined%}
      
-    <form  method=post action="{{url_for('fetch_data')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
+    <form  method=post action="{{url_for('hospital_admin_fetch_patient_data')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
     <div class="container">
       
       <label for="pid"><b>Patient ID </b></label>
