--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -1,170 +1,134 @@
+<!-- doctor_dashboard.html -->
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sesphr-Doctor Dashboard </title>
+  <title>Sesphr-Doctor Dashboard</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
-  
-  <link rel="stylesheet" href="./static/css/style_dashboard.css">
-
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style_dashboard.css') }}">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<head>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-
-<body>
-
   <ul id="slide-out" class="side-nav fixed z-depth-2">
     <li class="center no-padding">
       <div class="blue darken-2 white-text" style="height: 180px;">
         <div class="row">
           <img style="margin-top: 5%;" width="100" height="100" src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463990208/photo_dkkrxc.png" class="circle responsive-img" />
-
-          <p style="margin-top: -13%;">
-          {{user_name}} 
-          </p>
+          <p style="margin-top: -13%;">{{ user_name }}</p>
         </div>
       </div>
     </li>
-
     <li id="dash_dashboard"><a class="waves-effect" href="#!"><b>Dashboard</b></a></li>
-    </ul>
   </ul>
 
   <header>
-    
     <ul class="dropdown-content" id="user_dropdown">
-     <!---- <li><a class="blue-text" href="#!">Profile</a></li>-->
-      <li><a class="blue-text" href="{{url_for('index')}}">Logout</a></li>
+      <li><a class="blue-text" href="{{ url_for('index') }}">Logout</a></li>
     </ul>
 
     <nav class="blue" role="navigation">
-
       <div class="nav-wrapper">
-        <a class="navbar-brand" href="#"><img src="./static/img/logo2.png" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
-        <a data-activates="slide-out" class="button-collapse show-on-" href="#!"><img style="margin-top: -50px; margin-left: 5px;" src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463989873/smaller-main-logo_3_bm40iv.gif" /></a>
-
+        <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/logo2.png') }}" style="width: 140px; margin-top: -16px;"></a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <a class='right dropdown-button' href='' data-activates='user_dropdown'><i class=' material-icons'>account_circle</i></a>
+            <a class='right dropdown-button' href='' data-activates='user_dropdown'><i class='material-icons'>account_circle</i></a>
           </li>
         </ul>
-
-        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
     </nav>
-
-    
   </header>
 
-<div>
-  {%if failure is defined%}
-   <h5 style="text-align: center;">Access Denied</h5>
-   <h5 style="text-align: center;">Try Again</h5>
-   {%endif%}
-  {%if allow is defined %}
-  <form  method=post action="{{url_for('patient_codes')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
-    <div class="container">
-      
-      <label for="pid"><b>Patient ID </b></label>
-      <input type="text" placeholder="Enter Patient ID" name="pid" required style="margin-left: 85px;">
-      <br>
-      <label for="passcode"><b>Passcode  </b></label>
-      <input type="text" placeholder="Enter Passcode" name="pcode" required style="margin-left: 90px;" >
-      <br>
-      <br><br>
+  <div>
+    {% if failure is defined %}
+      <h5 style="text-align: center;">Access Denied</h5>
+      <h5 style="text-align: center;">Try Again</h5>
+    {% endif %}
 
-     <button class="blue btn waves-effect waves-light" type="submit" name="action">SUBMIT DATA
-    <i class="material-icons right">send</i>
-    </button>
-    </div>
-  </form>
-  {%endif%}
-  <br>
+    {% if allow is defined %}
+      <form method="post" action="{{ url_for('doctor_verify_patient_code') }}" style="margin-top:100px;margin-left:200px;">
+        <div class="container">
+          <label for="pid"><b>Patient ID </b></label>
+          <input type="text" placeholder="Enter Patient ID" name="pid" required style="margin-left: 85px;">
+          <br>
+          <label for="passcode"><b>Passcode  </b></label>
+          <input type="text" placeholder="Enter Passcode" name="pcode" required style="margin-left: 90px;">
+          <br><br>
+          <button class="blue btn waves-effect waves-light" type="submit">SUBMIT DATA
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
+      </form>
+    {% endif %}
 
-  {%if sucess is defined%}
-   <h5 style="text-align: center;">Data Entered </h5>
-   {%endif%}
+    {% if sucess is defined %}
+      <h5 style="text-align: center;">Data Entered</h5>
+    {% endif %}
 
+    {% if access is defined %}
+      <h5 style="text-align: center;">Access Granted</h5>
+      <div class="container" style="margin-top: 100px; align-items: center;">
+        <button class="blue btn waves-effect waves-light" type="button" onclick="window.location.href='{{ url_for('doctor_view_patient_data') }}';" style="margin-left: 170px;">VIEW HISTORY
+          <i class="material-icons right">send</i>
+        </button>
+        <button class="blue btn waves-effect waves-light" type="button" onclick="window.location.href='{{ url_for('doctor_add_patient_form') }}';" style="margin-left: 30px;">ADD DATA
+          <i class="material-icons right">send</i>
+        </button>
+      </div>
+    {% endif %}
 
-  {% if access is defined%}
-  <h5 style="text-align: center;">Access Granted </h5>
+    {% if add is defined %}
+      <form method="post" action="{{ url_for('doctor_insert_patient_data') }}" style="margin-top:100px;margin-left:200px;">
+        <div class="container">
+          <label for="diag"><b>Diagnosis </b></label>
+          <input type="text" placeholder="Enter Diagnosis" name="diag" required style="margin-left: 85px;">
+          <br>
+          <label for="pres"><b>Prescription </b></label>
+          <input type="text" placeholder="Enter Prescription" name="pres" required style="margin-left: 90px;">
+          <br><br>
+          <button class="blue btn waves-effect waves-light" type="submit">SUBMIT DATA
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
+      </form>
+    {% endif %}
 
-  <div class="container" style="margin-top: 100px; align-items: center;">
-     <button class="blue btn waves-effect waves-light" type="submit" name="action" onclick="window.location.href='{{url_for('show_data')}}';" style="margin-left: 170px;">VIEW HISTORY
-    <i class="material-icons right">send</i>
-    </button>
-     <button class="blue btn waves-effect waves-light" type="submit" name="action" onclick="window.location.href='{{url_for('add_data')}}';"style="margin-left: 30px;"> ADD DATA
-    <i class="material-icons right">send</i>
-    </button>
-  </div>
-  {% endif %}
-
-
-{% if add is defined %}
-    <form  method=post action="{{url_for('insert_data')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
-    <div class="container">
-      
-      <label for="diag"><b>Diagnosis </b></label>
-      <input type="text" placeholder="Enter Diagnosis" name="diag" required style="margin-left: 85px;">
-      <br>
-      <label for="pres"><b>Prescription </b></label>
-      <input type="text" placeholder="Enter Prescription" name="pres" required style="margin-left: 90px;" >
-      <br>
-      <br><br>
-
-     <button class="blue btn waves-effect waves-light" type="submit" name="action">SUBMIT DATA
-    <i class="material-icons right">send</i>
-    </button>
-    </div>
-  </form>
-
-{%endif%}
-{%if output_data is defined%}
-<div class ="container">
-  <table class="striped" style="margin-top: 100px; margin-left: 80px;">
-    <thead>
-    <tr>
-        <th>Date</th>
-        <th>Diagnosis</th>
-        <th>Doctor id</th>
-        <th>Prescription</th>
-        <th>Test type</th>
-        <th>Result</th>
-    </tr>
-    </thead>
-    <tbody>
-        {% for row in output_data %}
+    {% if output_data is defined %}
+      <div class="container">
+        <table class="striped" style="margin-top: 100px; margin-left: 80px;">
+          <thead>
             <tr>
-                <td>{{row[0]}}</td>
-                <td>{{row[1]}}</td>
-                <td>{{row[2]}}</td>
-                <td>{{row[3]}}</td>
-                <td>{{row[4]}}</td>
-                <td>{{row[5]}}</td>
+              <th>Date</th>
+              <th>Diagnosis</th>
+              <th>Doctor ID</th>
+              <th>Prescription</th>
+              <th>Test Type</th>
+              <th>Result</th>
             </tr>
-        {% endfor %}      
-    </tbody>
-  </table>
-</div>
-{%endif%}
+          </thead>
+          <tbody>
+            {% for row in output_data %}
+              <tr>
+                <td>{{ row[0] }}</td>
+                <td>{{ row[1] }}</td>
+                <td>{{ row[2] }}</td>
+                <td>{{ row[3] }}</td>
+                <td>{{ row[4] }}</td>
+                <td>{{ row[5] }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    {% endif %}
+  </div>
 
+  <footer class="page-footer blue" style="position: fixed;left: 0;bottom: 0;width: 100%;">
+    <div class="footer-copyright" style="text-align: center;">
+      © Copyright SeSPHR. All Rights Reserved &nbsp; Made with <a style="color: red;">❤</a> by SeSPHR TEAM
+    </div>
+  </footer>
 
-  <footer class="page-footer blue"style="position:  fixed;left: 0;bottom: 0;width: 100%;">
-          <div class="footer-copyright" style="text-align: center;">
-           © Copyright SeSPHR. All Rights Reserved &nbsp; Made with <a style="color: red;">❤ </a>by SeSPHR TEAM
-          </div>
-</footer>
-            
-</body>
-
-</html>
-<!-- partial -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js'></script>
-<script  src="./static/js/script_dashboard.js"></script>
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js'></script>
+  <script src="{{ url_for('static', filename='js/script_dashboard.js') }}"></script>
 </body>
 </html>
