--- a/templates/lab_dashboard.html
+++ b/templates/lab_dashboard.html
@@ -66,7 +66,7 @@
    <h5 style="text-align: center;">Try Again</h5>
    {%endif%}
   {%if lab is defined %}
-  <form  method=post action="{{url_for('data_lab')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
+  <form  method=post action="{{url_for('lab_fetch_patient_data')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
     <div class="container">
       
       <label for="pid"><b>Patient ID </b></label>
@@ -95,7 +95,7 @@
 
   <div class="container" style="margin-top: 70px; align-items: center;">
      
-     <button class="blue btn waves-effect waves-light" type="submit" name="action" onclick="window.location.href='{{url_for('add_data_lab')}}';"style="margin-left: 200px;"> ADD DATA
+     <button class="blue btn waves-effect waves-light" type="submit" name="action" onclick="window.location.href='{{url_for('lab_add_test_result_form')}}';"style="margin-left: 200px;"> ADD DATA
     <i class="material-icons right">send</i>
     </button>
   </div>
@@ -103,7 +103,7 @@
 
 
 {% if add is defined %}
-    <form  method=post action="{{url_for('insert_data_lab')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
+    <form  method=post action="{{url_for('lab_insert_test_result')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
     <div class="container">
 
 
