--- a/templates/pharm_dashboard.html
+++ b/templates/pharm_dashboard.html
@@ -77,7 +77,7 @@
 {%if pharmacy is defined%}
 
 <p class="flow-text" style="text-align: center;">{{hname}} - PHARMACY</p>
-    <form  method=post action="{{url_for('data_pharm')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
+    <form  method=post action="{{url_for('pharmacy_fetch_patient_data')}}" enctype=multipart/form-data style="margin-top:100px;margin-left:200px;">
     <div class="container">
       
       <label for="pid"><b>Patient ID </b></label>
